Bug 636112 - Thunderbird should detect the encoding of the attachment when it is a text file; r=bienvenu,Standard8