mailnews/compose/src/nsMsgAttachmentHandler.cpp
@@ -35,6 +35,10 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
+#include "nsICharsetDetectionObserver.h"
+#include "nsICharsetDetector.h"
+#include "nsIPrefLocalizedString.h"
+#include "nsILineInputStream.h"
 #include "nsMsgAttachmentHandler.h"
 #include "prmem.h"
 #include "nsMsgCopy.h"
@@ -496,6 +500,100 @@ DONE:
   return 0;
 }
 
+class CharsetDetectionObserver : public nsICharsetDetectionObserver
+{
+public:
+  NS_DECL_ISUPPORTS
+  CharsetDetectionObserver(nsMsgAttachmentHandler* aAttachment)
+  {
+    m_attachment = aAttachment;
+  };
+
+  virtual ~CharsetDetectionObserver() {};
+  NS_IMETHOD Notify(const char* aCharset, nsDetectionConfident aConf)
+  {
+    m_attachment->m_charset = PL_strdup(aCharset);
+    return NS_OK;
+  };
+
+private:
+  nsMsgAttachmentHandler* m_attachment;
+};
+
+NS_IMPL_ISUPPORTS1(CharsetDetectionObserver, nsICharsetDetectionObserver)
+
+nsresult
+nsMsgAttachmentHandler::PickCharset()
+{
+
+  if (m_charset || strcmp(m_type, TEXT_PLAIN))
+    return NS_OK;;
+
+  nsCOMPtr<nsILocalFile> tmpFile =
+    do_QueryInterface(mTmpFile);
+  if (!tmpFile)
+    return NS_OK;
+  
+  nsCOMPtr<nsICharsetDetector> detector =
+    do_CreateInstance(NS_CHARSET_DETECTOR_CONTRACTID_BASE
+                             "universal_charset_detector");
+  if (!detector)
+  {
+    nsresult rv;
+    nsAdoptingString detectorName;
+    nsCOMPtr<nsIPrefBranch> prefBranch =
+      do_GetService(NS_PREFSERVICE_CONTRACTID,&rv);
+    NS_ENSURE_SUCCESS(rv,rv);
+
+    if (prefBranch)
+    {
+      nsCOMPtr<nsIPrefLocalizedString> prefLocalString;
+      prefBranch->GetComplexValue("intl.charset.detector",
+                          NS_GET_IID(nsIPrefLocalizedString),
+                          getter_AddRefs(prefLocalString));
+      prefLocalString->GetData(getter_Copies(detectorName));
+    }
+
+    // No universal charset detector, try the default charset detector
+    if (!detectorName.IsEmpty())
+    {
+      nsCAutoString detectorContractID;
+      detectorContractID.AssignLiteral(NS_CHARSET_DETECTOR_CONTRACTID_BASE);
+      AppendUTF16toUTF8(detectorName, detectorContractID);
+      detector = do_CreateInstance(detectorContractID.get());
+    }
+  }
+  
+  if (detector)
+  {
+    nsCOMPtr<nsIInputStream> inputFile;
+    nsCOMPtr<nsILineInputStream> lineInputStream;
+    nsCAutoString buffer;
+    PRBool isMore = PR_TRUE;
+    PRBool dontFeed = PR_FALSE;
+    nsCOMPtr<CharsetDetectionObserver> obs = new CharsetDetectionObserver(this);
+    nsresult rv;
+
+    nsCAutoString leafName;
+    tmpFile->GetNativeLeafName(leafName);
+    rv = NS_NewLocalFileInputStream(getter_AddRefs(inputFile), tmpFile);
+    NS_ENSURE_SUCCESS(rv, rv);
+
+    lineInputStream = do_QueryInterface(inputFile, &rv);
+    NS_ENSURE_SUCCESS(rv, rv);
+
+    detector->Init(obs);
+    while (isMore && NS_SUCCEEDED(lineInputStream->ReadLine(buffer, &isMore)))
+    {
+      detector->DoIt(buffer.get(), buffer.Length(), &dontFeed);
+      if (dontFeed)
+        break;
+    }
+    detector->Done();
+  }
+  return NS_OK;
+}
+    
 static nsresult
 FetcherURLDoneCallback(nsresult aStatus,
                        const nsACString &aContentType,
