mailnews/compose/src/nsMsgAttachmentHandler.h
@@ -97,6 +97,7 @@ public:
 public:
   nsresult              SnarfAttachment(nsMsgCompFields *compFields);
   int                   PickEncoding (const char *charset, nsIMsgSend* mime_delivery_state);
+  nsresult              PickCharset();
   void                  AnalyzeSnarfedFile ();      // Analyze a previously-snarfed file.
                                                     // (Currently only used for plaintext
                                                     // converted from HTML.) 
